# PyPGDBE

./: LICENSE  README.md  main.py  pyproject.toml
Dominik Folder/: print("Hello, World!" + " Welcome to Pyt.py
FilesDominik/: Example1.ipynb  test_database_searcher.py  test_utils.py
src/: __init__.py
src/pqcdbchk/: PHREEQC_databasehelper.py  PHREEQCsearcher.ipynb  utils.py
src/pqcdbchk/build_database/: __main__.py  blocks.py  clean_tables.py  parser_dat.py  utils.py  write_dataframes.py
test/: test_logic.py
