[project]
name = "urop2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "seaborn>=0.13.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]